--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && gh-pages -d out"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "aos": "^2.3.4",
     "next": "latest",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
